# elsa

./: .formatter.exs  .gitignore  .tool-versions  .travis.yml  README.md  mix.exs
.github/workflows/: main.yml  master.yml  release.yml
config/: integration.exs
lib/: elsa.ex
lib/elsa/: admin.ex  consumer.ex  dynamic_process_manager.ex  fetch.ex  message.ex  partitioner.ex  producer.ex  registry.ex  supervisor.ex  topic.ex  util.ex  wrapper.ex
lib/elsa/consumer/: group_member.ex  initializer.ex  message_handler.ex  supervisor.ex  worker.ex  worker_supervisor.ex
lib/elsa/consumer/worker/: initializer.ex
lib/elsa/group/: acknowledger.ex  consumer.ex  consumer_supervisor.ex  custom_acknowledger.ex  direct_acknowledger.ex  lifecycle_handler.ex  manager.ex  member.ex  supervisor.ex  worker.ex
lib/elsa/group/manager/: worker_manager.ex
lib/elsa/partitioner/: default.ex  md5.ex  random.ex
lib/elsa/producer/: initializer.ex  manager.ex  partitioner.ex  supervisor.ex
native/elsa_admin/: Cargo.toml  README.md
native/elsa_admin/src/: lib.rs
scripts/: deploy.sh  set_release_number.sh
test/integration/: elsa_test.exs  test_helper.exs
test/integration/elsa/: consumer_test.exs  fetch_test.exs  producer_test.exs  shutdown_test.exs
test/integration/elsa/consumer/: worker_test.exs
test/support/: assert_async.ex
test/unit/: elsa_test.exs  test_helper.exs
test/unit/elsa/: dynamic_process_manager_test.exs  partitioner_test.exs  producer_test.exs  registry_test.exs  topic.exs  topic_test.exs  util_test.exs  wrapper_test.exs
(+12 files in other folders)
